--- a/find_user_country_by_ip/package.json
+++ b/find_user_country_by_ip/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "xss-clean": "^0.1.4"
   }
 }
