--- a/json_storage/package.json
+++ b/json_storage/package.json
@@ -14,6 +14,11 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0"
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.4",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "mongodb": "^6.2.0",
+    "xss-clean": "^0.1.4"
   }
 }
