--- a/shortlinker_api/package.json
+++ b/shortlinker_api/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.4",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "mongoose": "^8.0.0",
     "nanoid": "^3.3.4",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "xss-clean": "^0.1.4"
   }
 }
